k8s/env-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: env-example
  labels:
    app: web
spec:
  containers:
    - name: nginx-image
      image: nginx
      Ports:
        containerPort: 8080
