k8s/pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-example
  labels:
    app: web
spec:
  containers:
    - name: jenkins-image
      image: jenkins
      Ports:
      - containerPort: 8080
