k8s/pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-example
  labels: web
spec:
  containers:
    - name: nginx
      image: nginx
