k8s/resource-limit.yml
apiVersion: v1
kind: Pod
metadata:
  name: resource-limit
  labels:
    app: web
spec:
  containers:
  - image: nginx
    name: nginx-image
    resources:
      requests:
        memory: "1Gi"
        cpu: 1
      limits:
        memory: "2Gi"
        cpu: 2
