k8s/clusterIP-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-examp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: web
