k8s/service-Nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport
  labels:
    app: web
spec:
 type:
 ports:
   - targetPort: 80
     port: 80
     nodePort: 30008
selector:  # pod labels
  app: web
